--- a/app/src/main/res/layout/fragment_club_select.xml
+++ b/app/src/main/res/layout/fragment_club_select.xml
@@ -100,7 +100,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:src="@drawable/ic_action_add_group" />
+            android:src="@drawable/ic_action_add_group"
+            android:id="@+id/fragment_club_add_club_imagebutton" />
 
         <ImageButton
             style="?android:attr/borderlessButtonStyle"
