Finish club edit

--- a/app/src/main/res/layout-land/fragment_club_select.xml
+++ b/app/src/main/res/layout-land/fragment_club_select.xml
@@ -108,9 +108,11 @@
 
             <ImageButton
                 style="?android:attr/borderlessButtonStyle"
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
+                android:id="@+id/fragment_club_add_club_imagebutton"
                 android:src="@drawable/ic_action_add_group" />
 
             <ImageButton
