--- a/app/src/main/res/layout/fragment_club_select.xml
+++ b/app/src/main/res/layout/fragment_club_select.xml
@@ -116,7 +116,7 @@
     <ListView
         android:id="@+id/listview_clubs"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1"
         style="@style/ClubListStyle"
         tools:listitem="@layout/club_list_item" />
