--- a/app/src/main/res/layout-land/fragment_club_select.xml
+++ b/app/src/main/res/layout-land/fragment_club_select.xml
@@ -139,6 +139,7 @@
             android:minHeight="?android:attr/listPreferredItemHeight">
 
             <ImageButton
+                android:id="@+id/imagebutton_openclub"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
