--- a/app/src/main/res/layout/fragment_club_select.xml
+++ b/app/src/main/res/layout/fragment_club_select.xml
@@ -129,6 +129,7 @@
 
         <ImageButton
             style="?android:attr/borderlessButtonStyle"
+            android:id="@+id/imagebutton_openclub"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:src="@drawable/ic_action_forward" />
