--- a/app/src/main/res/layout/activity_club_select.xml
+++ b/app/src/main/res/layout/activity_club_select.xml
@@ -8,9 +8,9 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
 android:id="@+id/fragment_forecast"
-android:name="com.yknx.android.club.ClubSelectFragment"
+android:name="com.yknx.android.club.fragments.ClubSelectFragment"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context="com.yknx.android.club.ClubSelect.ClubSelectFragment"
+tools:context="com.yknx.android.club.activities.ClubSelect.ClubSelectFragment"
 tools:layout="@layout/fragment_club_select"
     />
