--- a/app/src/main/res/layout/fragment_detail_assist.xml
+++ b/app/src/main/res/layout/fragment_detail_assist.xml
@@ -4,22 +4,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="32dp">
+    android:padding="8dp">
 
-    <EditText
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText"
         android:layout_gravity="center_horizontal"
-        android:hint="Account Number"
-        android:textSize="26dp"
-        android:padding="8dp" />
+        android:gravity="center_vertical">
 
-    <fragment
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/fragment_details_assist_account"
+            android:layout_gravity="center"
+            android:hint="Account Number"
+            android:textSize="20dp"
+            android:padding="8dp"
+            android:gravity="center"
+            android:ellipsize="start"
+            android:inputType="number"
+            android:layout_marginLeft="32dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="32dp"
+            android:layout_marginRight="8dp" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/fragment_detail_assist_addassist"
+            android:src="@drawable/ic_action_new"
+            android:background="#00ffffff" />
+    </LinearLayout>
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:name="com.yknx.android.club.UtilityUserViewFragment"
-        android:id="@+id/fragment"
-        android:layout_gravity="center_horizontal"
-        tools:layout="@layout/fragment_utility_userview" />
+        android:layout_height="match_parent"
+        android:id="@+id/fragment_detail_usercontainer"
+        tools:layout="@layout/fragment_utility_userview"
+        ></FrameLayout>
+
+
 </LinearLayout>
