--- a/app/src/main/res/layout/fragment_save_create__club.xml
+++ b/app/src/main/res/layout/fragment_save_create__club.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.yknx.android.club.SaveCreate_Club.EditClubFragment"
+    tools:context="com.yknx.android.club.activities.SaveCreate_Club.EditClubFragment"
     android:orientation="vertical">
 
     <LinearLayout
