--- a/app/src/main/res/layout/fragment_utility_userview.xml
+++ b/app/src/main/res/layout/fragment_utility_userview.xml
@@ -14,8 +14,8 @@
         <TextView
             android:layout_width="@dimen/_0_dimen"
             android:layout_height="wrap_content"
-            android:text="Jorge Alejandro Figueroa Pérez"
-            android:id="@+id/textView"
+            android:id="@+id/userview_name_textview"
+            tools:text="Jorge Figueroa Pérez"
             style="@style/condensed_large"
             android:layout_weight="1"
             android:paddingLeft="4dp" />
@@ -24,24 +24,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/ic_action_time"
-            android:id="@+id/textView2"
+            android:id="@+id/userview_assist_count_textview"
             android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
             android:text="7"
             android:gravity="center_vertical"
             android:paddingRight="4dp" />
     </LinearLayout>
 
-    <TextView
-        style="?android:attr/listSeparatorTextViewStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Assists"
-        android:id="@+id/textView3" />
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"/>
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listView"
+        android:id="@+id/userview_assists_listview"
         android:paddingTop="4dp"
         tools:listitem="@layout/list_item_assistitem"
          />
