--- a/app/src/main/res/menu/save_create__club.xml
+++ b/app/src/main/res/menu/save_create__club.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.yknx.android.club.SaveCreate_Club" >
+    tools:context="com.yknx.android.club.activities.SaveCreate_Club" >
 
 </menu>
