--- a/app/src/main/res/layout/fragment_club_select.xml
+++ b/app/src/main/res/layout/fragment_club_select.xml
@@ -11,7 +11,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"-->
 
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:id="@+id/fragment_club_select_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -38,7 +38,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-condensed"
-                android:text="1st Term"
+                tools:text="1st Term"
+                android:text="Choose a"
                 android:textColor="@android:color/primary_text_dark"
                 android:textSize="22sp" />
 
@@ -47,7 +48,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-condensed"
-                android:text="MyClub"
+                tools:text="MyClub"
+                android:text="Club"
                 android:textColor="@android:color/primary_text_dark"
                 android:textSize="48sp" />
 
@@ -56,7 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-light"
-                android:text="Users: 999"
+                tools:text="Users: 999"
                 android:textColor="@android:color/primary_text_dark"
 
                 android:textSize="28sp" />
@@ -73,7 +75,7 @@
                 android:id="@+id/fragment_club_select_club_icon"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src="@drawable/art_placeholder"
+                tools:src="@drawable/art_placeholder"
 
                 />
 
@@ -124,15 +126,22 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:gravity="center_horizontal"
-        android:minHeight="?android:attr/listPreferredItemHeight">
+        android:minHeight="?android:attr/listPreferredItemHeight"
+        android:animateLayoutChanges="true"
+        >
 
         <ImageButton
-            style="?android:attr/borderlessButtonStyle"
             android:id="@+id/imagebutton_openclub"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_action_forward" />
+            android:src="@drawable/ic_action_forward"
+
+            tools:visibility="visible"
+
+            style="@style/FloatingActionButtonLight" />
+
+
+
     </LinearLayout>
 
 </LinearLayout>
