--- a/app/src/main/res/values-v19/themes.xml
+++ b/app/src/main/res/values-v19/themes.xml
@@ -1,26 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- the theme applied to the application or activity -->
-    <style name="ClubSelectActionBarTheme"
-        parent="@style/Theme.AppCompat.Light">
+
+    <style name="ClubSelectActionBarTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
-        <item name="android:actionBarStyle">@style/HeaderlessActionBar</item>
-        <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:fitsSystemWindows">true</item>
 
-        <!-- Support library compatibility -->
-        <item name="actionBarStyle">@style/HeaderlessActionBar</item>
+
     </style>
-
-    <!-- ActionBar styles -->
-    <style name="HeaderlessActionBar"
-        parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
-        <item name="android:background">@color/club_default</item>
-        <item name="android:displayOptions"></item>
-
-        <!-- Support library compatibility --><item name="background">@color/club_default</item>
-    </style>
-
-
 </resources>
