--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,6 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-    </style>
+
 
     <style name="ClubListStyle">
         <item name="android:choiceMode">singleChoice</item>
@@ -18,5 +15,21 @@
     <style name="condensed_large">
         <item name="android:fontFamily">sans-serif-condensed</item>
         <item name="android:textAppearance">@android:style/TextAppearance.DeviceDefault.Large</item>
+    </style>
+    <style name="FloatingActionButton">
+
+    </style>
+
+    <style name="FloatingActionButtonLight">
+        <item name="android:layout_width">56dp</item>
+        <item name="android:layout_height">56dp</item>
+        <item name="android:layout_alignParentBottom">true</item>
+        <item name="android:layout_alignParentRight">true</item>
+        <item name="android:layout_marginRight">16dp</item>
+        <item name="android:layout_marginBottom">16dp</item>
+        <item name="android:tint">@android:color/black</item>
+        <item name="android:elevation">1dp</item>
+        <item name="android:background">@drawable/ripple</item>
+        <item name="android:stateListAnimator">@anim/fab_anim</item>
     </style>
 </resources>
