--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,8 +5,15 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fragment_club_select_header_paddingTop">16dp</dimen>
-    <dimen name="navigation_drawer_width">240dp</dimen>
+
     <dimen name="_0_dimen">0dp</dimen>
     <dimen name="start_z">5dp</dimen>
     <dimen name="end_z">15dp</dimen>
+
+
+
+    <!-- Per the design guidelines, navigation drawers should be between 240dp and 320dp:
+         https://developer.android.com/design/patterns/navigation-drawer.html -->
+    <dimen name="navigation_drawer_width">240dp</dimen>
+    <dimen name="toolbar_elevation">4dp</dimen>
 </resources>
