--- a/app/src/main/res/values/colors_material.xml
+++ b/app/src/main/res/values/colors_material.xml
@@ -9,4 +9,16 @@
   <color name="secondary_text">#727272</color>
   <color name="icons">#FFFFFF</color>
   <color name="divider">#B6B6B6</color>
+
+    <color name="myPrimaryColor">@color/primary</color>
+    <color name="myPrimaryDarkColor">@color/primary_dark</color>
+    <color name="myAccentColor">@color/accent</color>
+    <color name="myDrawerBackground">#F2F2F2</color>
+    <color name="myWindowBackground">#DEDEDE</color>
+    <color name="myTextPrimaryColor">@color/primary_text</color>
+    <color name="myNavigationColor">#000000</color>
+
+    <color name="selected_gray">#ffdbdbdb</color>
+
+
 </resources>
