--- a/app/src/main/res/layout/fragment_attendance.xml
+++ b/app/src/main/res/layout/fragment_attendance.xml
@@ -69,8 +69,8 @@
             android:id="@+id/bottom_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/material_blue_grey_900"
-            android:minHeight="12dp"
+           tools:background="@color/material_blue_grey_900"
+            tools:minHeight="12dp"
              />
         </LinearLayout>
     </android.support.v7.widget.CardView>
