--- a/app/src/main/res/layout/fragment_club_select.xml
+++ b/app/src/main/res/layout/fragment_club_select.xml
@@ -111,6 +111,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:id="@+id/fragment_club_settings_button"
             android:src="@drawable/ic_action_settings" />
     </RelativeLayout>
