--- a/app/src/main/res/layout/user_row.xml
+++ b/app/src/main/res/layout/user_row.xml
@@ -7,7 +7,7 @@
 
     android:gravity="center_vertical"
     android:minHeight="?android:attr/listPreferredItemHeight"
-    android:background="@drawable/touch_selector"
+    android:background="?android:attr/selectableItemBackground"
     >
 
     <LinearLayout
