--- a/app/src/main/res/drawable-v21/touch_selector.xml
+++ b/app/src/main/res/drawable-v21/touch_selector.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+<ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="?android:colorControlHighlight">
+    <item android:id="@android:id/mask">
+        <shape android:shape="rectangle">
+            <solid android:color="?android:colorAccent" />
+        </shape>
+    </item>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- State when a row is being pressed, but hasn't yet been activated (finger down) -->
@@ -13,3 +18,4 @@
     <!-- Default, "just hangin' out" state. -->
     <item android:drawable="@android:color/transparent" />
 </selector>
+</ripple>
