proper Club id handling, and some refactor

--- a/app/src/main/res/layout/fragment_attendance.xml
+++ b/app/src/main/res/layout/fragment_attendance.xml
@@ -70,7 +70,10 @@
         <FrameLayout
             android:id="@+id/bottom_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0px"
+            android:layout_weight="1"
+            android:visibility="gone"
+            tools:visibility="visible"
            tools:background="@color/material_blue_grey_900"
             tools:minHeight="12dp"
              />
