--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -5,18 +5,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="?android:attr/selectableItemBackground"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp"
-        android:paddingLeft="12dp"
         android:gravity="center_vertical"
         android:minHeight="?android:attr/listPreferredItemHeight"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingBottom="16dp"
+        android:paddingLeft="12dp"
+        android:paddingTop="16dp">
 
         <!--<LinearLayout-->
         <!--android:layout_width="64sp"-->
@@ -41,15 +40,13 @@
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin">
 
-
             <TextView
                 android:id="@+id/user_detail_name"
                 style="@style/condensed_very_large"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Person Name"
                 android:text="Mariana Alejandra Preciado Martinez"
-                />
+                tools:text="Person Name" />
 
 
             <TextView
@@ -57,49 +54,50 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-condensed"
-                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
-                tools:text="Email"
                 android:text="mariana_cma_94@gmail.com"
-                />
+                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
+                tools:text="Email" />
 
             <TextView
                 android:id="@+id/user_detail_campus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-condensed"
+                android:text="Facultad de Psicologia"
                 android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
-                tools:text="University"
-                android:text="Facultad de Psicología"
-                />
+                tools:text="University" />
 
 
         </LinearLayout>
 
-        <!--<ImageButton-->
+        <ImageButton
 
-            <!--android:id="@+id/user_row_add_button"-->
+            android:id="@+id/user_detail_close"
 
-            <!--style="?android:attr/borderlessButtonStyle"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:adjustViewBounds="true"
 
-            <!--android:adjustViewBounds="true"-->
-            <!--android:contentDescription="@string/ADD_ATTENDANCE"-->
+            android:src="@drawable/ic_action_about"
+            style="?android:attr/borderlessButtonStyle"
 
-            <!--android:src="@drawable/ic_add_black_24dp" />-->
+            android:contentDescription="@string/ADD_ATTENDANCE"
+            />
 
 
     </LinearLayout>
+
     <View
         android:layout_width="fill_parent"
         android:layout_height="1dp"
-        android:background="@color/light_gray"/>
+        android:background="@color/light_gray" />
 
     <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:id="@+id/user_detail_recyclerview"
+        android:id="@+id/user_detail_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
 
-    >
+        >
 
     </android.support.v7.widget.RecyclerView>
 
