--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -35,6 +35,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-condensed"
                 android:text="1st Term"
+                android:visibility="gone"
                 android:textColor="@android:color/primary_text_dark"
                 android:textSize="18sp" />
 
